Update Todo App with UI enhancements and Java 8 compatibility